# legal-document-citation-rag

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEV_START.md  PROJECT_CONTEXT.md  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_schema.py
backend/app/: initial_data.py  main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  chat.py  documents.py  health.py  users.py
backend/app/core/: config.py  db.py  limiter.py  security.py
backend/app/crud/: chunk.py  conversation.py  document.py  tenant.py  user.py
backend/app/models/: __init__.py  base.py  chunk.py  conversation.py  document.py  tenant.py  user.py
backend/app/services/: chunker.py  embeddings.py  llm.py  pdf_parser.py  retrieval.py  storage.py
backend/app/worker/: celery_app.py  tasks.py
backend/evaluation/: README.md  __init__.py  categories.py  corpus.py  dataset.py  db.py  env_bootstrap.py  metrics.py  requirements-eval.txt  run_eval.py
backend/evaluation/data/: eval_set.sample.jsonl
backend/scripts/: prestart.sh
backend/tests/: conftest.py  test_eval_metrics.py  test_llm_citations.py  test_retrieval_fusion.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: routeTree.gen.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: login.tsx  (+2 more)
scripts/: init-pgvector.sql
(+4 files in other folders)
