[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal-document-citation-rag-backend"
version = "0.1.0"
description = "legal-document-citation-rag — Tenant-Isolated Legal AI Contract Review Platform"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# evaluation modules bootstrap the env before importing app.* — imports must
# appear after load_repo_env(), so E402 (module-level import not at top) is
# expected and intentional throughout the package.
"evaluation/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
